[gd_scene load_steps=8 format=3 uid="uid://u0t3rso77l5s"]

[ext_resource type="Script" path="res://Interface/SaveMenu/SaveMenu.gd" id="1_67r7c"]
[ext_resource type="FontFile" uid="uid://fbxdyn186ebu" path="res://Interface/Fonts/Kenney Thick.ttf" id="1_ruimo"]

[sub_resource type="LabelSettings" id="LabelSettings_x6ocx"]
font = ExtResource("1_ruimo")
font_size = 80

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ifw5s"]
bg_color = Color(0.945098, 0.509804, 0.419608, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vv2cr"]
bg_color = Color(0.988235, 0.615686, 0.494118, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p1tu5"]
bg_color = Color(0.890196, 0.301961, 0.301961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qrfh1"]
bg_color = Color(0.94902, 0.545098, 0.458824, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)

[node name="SaveMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_67r7c")

[node name="BackgroundColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -148.0
offset_right = 240.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
text = "Paused"
label_settings = SubResource("LabelSettings_x6ocx")

[node name="SaveButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = 100.0
offset_right = 144.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.968627, 0.964706, 0.980392, 1)
theme_override_fonts/font = ExtResource("1_ruimo")
theme_override_font_sizes/font_size = 33
theme_override_styles/normal = SubResource("StyleBoxFlat_ifw5s")
theme_override_styles/hover = SubResource("StyleBoxFlat_vv2cr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p1tu5")
theme_override_styles/focus = SubResource("StyleBoxFlat_qrfh1")
text = "save"

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = 212.0
offset_right = 144.0
offset_bottom = 292.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.968627, 0.964706, 0.980392, 1)
theme_override_fonts/font = ExtResource("1_ruimo")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_ifw5s")
theme_override_styles/hover = SubResource("StyleBoxFlat_vv2cr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p1tu5")
theme_override_styles/focus = SubResource("StyleBoxFlat_qrfh1")
text = "main menu"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = 324.0
offset_right = 144.0
offset_bottom = 404.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.968627, 0.964706, 0.980392, 1)
theme_override_fonts/font = ExtResource("1_ruimo")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_ifw5s")
theme_override_styles/hover = SubResource("StyleBoxFlat_vv2cr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p1tu5")
theme_override_styles/focus = SubResource("StyleBoxFlat_qrfh1")
text = "quit"

[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
